
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 int exit (int) ;
 int * fopen (char*,char*) ;
 int perror (char*) ;

FILE * open_file (char *filename) {

       FILE *fp;

       fp = fopen ( filename , "w" );

       if (!fp) {
               perror ("Cant open file");
               exit (-1);
       }

       return fp;
}
